# cafe-service-robot-ros2

./: .gitignore  CMakeLists.txt  LICENSE  PROGRESS_LOG.md  README.md  REPORT_DRAFT.md  delivery_node.py  package.xml
config/: nav2.rviz  nav2_params.yaml  slam_params.yaml
launch/: display.launch.py  gazebo.launch.py  nav2.launch.py  slam.launch.py
maps/: cafe_map.pgm  cafe_map.yaml
meshes/: back_castor_link.STL  camera_link.STL  chassis_base_link.STL  front_castor_link.STL  left_wheel_link.STL  lidar_link.STL  right_wheel_link.STL
urdf/: serv_robot.csv  serv_robot.urdf
worlds/: cafe.world
